--- a/lectures/2024-12-09-brain-inspired/2024-12-09.md
+++ b/lectures/2024-12-09-brain-inspired/2024-12-09.md
@@ -431,6 +431,13 @@ Li Fei-Fei's [World Labs](https://www.worldlabs.ai/blog)
 
 #### The Difference from Embodied Intelligence?
 
+![brain](https://kidspressmagazine.com/wp-content/uploads/2014/06/dreamstime_m_36838484EDITED.jpg)
+
+==
+
+### Q&A: Compare MLP, KAN, SNN
+
+
 ==
 
 
