--- a/lectures/2024-12-09-brain-inspired/2024-12-09.md
+++ b/lectures/2024-12-09-brain-inspired/2024-12-09.md
@@ -78,8 +78,8 @@ Harness the efficiency and sophistication refined <br> over **hundreds of millio
 
 ### Nissl stain & Golgi stain
 
-![alt text](nissl.png)<!-- .element: height="300" --> 
-![alt text](golgi.png)<!-- .element: height="300" -->
+![alt text](images/nissl.png)<!-- .element: height="300" --> 
+![alt text](images/golgi.png)<!-- .element: height="300" -->
 
 *The gain in brain is mainly in the stain.*
 
@@ -91,13 +91,13 @@ Harness the efficiency and sophistication refined <br> over **hundreds of millio
 ==
 
 
-![alt text](electron-microscope.png)
+![alt text](images/electron-microscope.png)
 
 **Neurites in contact, not continuity**<!-- .element style="color:#FFED64"--><br>by electron microscopy (1950s)
 
 ==
 
-![alt text](image-2.png)<!-- .element: height="500" -->
+![alt text](images/neocortex.png)<!-- .element: height="500" -->
 
 The multilayer structure of the neocortex (1950s)
 
@@ -122,7 +122,7 @@ Anterograde and retrograde transport inside neurons<br>with kinesin and dynein
 
 ==
 
-![alt text](image-3.png)<!-- .element: height="500" -->
+![alt text](images/cannoboid.png)<!-- .element: height="500" -->
 
 Retrograde messengers between neurons: Anandamide, NO, CO, H₂S
 ===
@@ -383,7 +383,7 @@ Whether the second form is a rotation of the first
 
 ==
 
-![alt text](stairs.png) <!-- .element: height="500" --> 
+![alt text](images/stairs.png) <!-- .element: height="500" --> 
 
 Upstairs or downstairs?
 
@@ -428,59 +428,88 @@ Li Fei-Fei's [World Labs](https://www.worldlabs.ai/blog)
 
 ===
 
+##### Early Exploration of
+#### Brain-Inspired Navigation & Spatial Intelligence
 
-#### The Difference from Embodied Intelligence?
+LI Shaun, ZHU Xiangwei
 
-![brain](https://kidspressmagazine.com/wp-content/uploads/2014/06/dreamstime_m_36838484EDITED.jpg)
+2024-12-16
 
+<!-- .element: style="font-size:20pt" -->
+
+===
+
+![alt text](images/levels.png)<!-- .element: height="450" --> 
+
+==
+
+![brain](https://kidspressmagazine.com/wp-content/uploads/2014/06/dreamstime_m_36838484EDITED.jpg) <!-- .element: height="650" --> 
 ==
 
 ### Q&A: Compare MLP, KAN, SNN
 
 
-==
+===
 
+### Embodied Intelligence
+![embodiedai](https://sos-ch-dk-2.exo.io/public-website-production-2022/filer_public/1b/41/1b41a815-05bf-4ef9-88b9-50d268831950/alex-knight-2ejcsulrwc8-unsplash.jpg)<!-- .element: height="350" --> 
+
+===
 
 
 ## embody
 
 em-/en- : to make something have a particular quality
-<!-- .element: style="font-size:20pt" -->
+<!-- .element: style="font-size:24pt" -->
 
 Compare: empower
 
 word family: embody (v.), embodied (adj.), embodiment (n.)
-<!-- .element: style="font-size:20pt" -->
+<!-- .element: style="font-size:24pt" -->
+
+===
+
+<video loop autoplay="" muted="" playsinline="" preload="metadata">
+                <source src="https://general-navigation-models.github.io/vint/static/videos/teaser.mp4" type="video/mp4">
+            </video>
+
+[ViNT: A Foundation Model for Visual Navigation](https://general-navigation-models.github.io/vint/)
+
+==
+![Open X-Embodiment](https://robotics-transformer-x.github.io/img/overview.png)
+[Open X-Embodiment: Robotic Learning Datasets and RT-X Models](https://robotics-transformer-x.github.io/)
+
 
 ==
 
+![extreme](https://extreme-cross-embodiment.github.io/static/images/teaser.png)
+
+[Extreme Cross-Embodiment Learning for Manipulation and Navigation](https://extreme-cross-embodiment.github.io/)
+
+===
+## Embodied AI $\overset{?}{=}$ Robotics
 
 
-<pre data-id="code-animation">
-<code class="txt" data-trim data-line-numbers="1-2|3-6|7-8|9-10">
-Many people think that a very abstract activity, 
-like the playing of chess, would be best.
-It can also be maintained that 
-it is best to provide the machine with 
-the best sense organs that money can buy, 
-and then teach it to understand and speak English. 
-This process could follow the normal teaching of a child. 
-Things would be pointed out and named, etc. 
-Again I do not know what the right answer is, 
-but I think both approaches should be tried.
 
-</code>
-</pre>
+==
+### Embodied agents generalize to ...
+- WHERE -- Navigation 
+- WHAT -- Manipulation
+- WHO -- Cross-embodiment
 
-[//]: # (Grounding)
+===
+
+
+
+
+*Many people think that a very abstract activity, like the playing of chess, would be best.  It can also be maintained that it is best to provide the machine with the best sense organs that money can buy, and then teach it to understand and speak English.  This process could follow the normal teaching of a child.  Things would be pointed out and named, etc. Again I do not know what the right answer is, but I think both approaches should be tried.*
+<!-- .element: style="float: left; width: 75%; padding-right:1em; text-align: justify;" -->
+
+
+![Turing](https://collectionimages.npg.org.uk/std/mw63680/Alan-Turing.jpg)<!-- .element: style="width: 20%" -->
 
 Alan Turing, *Computing Machinery and Intelligence* (1950)
-<!-- .element: style="font-size:18pt" -->
-
-<img class="r-stretch" src="https://collectionimages.npg.org.uk/std/mw63680/Alan-Turing.jpg">
-
-Note: (1912-1954)
-<!-- .element: style="font-size:18pt" -->
+<!-- .element: style="font-size:16pt" -->
 
 
 ==
@@ -492,13 +521,62 @@ Note:( 思维 vs 行为)
 
 ==
 
+### Moravec's Paradox
 
 
-## Embodied AI $\overset{?}{=}$ Robotics
+Hard problems are easy; easy problems are hard.
+
+*It is comparatively easy to make computers exhibit adult level performance on intelligence tests or playing checkers, and difficult or impossible to give them the skills of a one-year-old when it comes to perception and mobility* (1988)
+<!-- .element: style="float: left; width: 60%; padding-right:1em; text-align: justify;" -->
+
+![moravec](https://www.onthisday.com/images/people/hans-moravec.jpg?w=360) <!-- .element: style="width: 30%" -->
 
 
 
+==
+
+![bishop](https://i.pinimg.com/736x/c4/dc/9e/c4dc9e42d76a2507c0a25497338593bd.jpg)<!-- .element: height="300" --> $\quad$
+![brooks](https://people.csail.mit.edu/brooks/all%20images/company%20images/brooks_sept_2021.jpg) <!-- .element: height="300" --> 
+### *Elephants don't play chess* (1990)
+Rodney Brooks
+
+
+==
+
+Paradigms of AI
+- Symbolism
+- Connectionism
+- Actionism
+
+
+==
+
+不聞不若聞之，聞之不若見之，見之不若知之，知之不若行之，學至於行之而止矣。
+
+——《荀子·儒效》
+<!-- .element: style="font-size:18pt;text-align:right" -->
+<br />
+
+
+紙上得來終覺淺，絕知此事要躬行。
+
+
+—— 陸游 《冬夜讀書示子聿》
+<!-- .element: style="font-size:18pt;text-align:right" -->  
+
+<br />
+
+知之愈明，則行之愈篤；行之愈篤，則知之益明.
+
+—— 朱熹 《朱子語類》
+<!-- .element: style="font-size:18pt;text-align:right" -->
+
+
+<!-- .slide: style="font-size:24pt" -->
 ===
+
+
+
 
 <img class="r-stretch" src="http://2.bp.blogspot.com/-xYAEEyxjhuk/Tut2TaFzUtI/AAAAAAAAACw/G7VndH6VHKM/s1600/%25E3%2582%25B4%25E3%2583%25B3%25E3%2583%2589%25E3%2583%25A9%25E3%2583%258D%25E3%2582%25B3.jpg">
 
@@ -510,53 +588,39 @@ Classic experiment by Held and Hein (1963)
 
 *We are told that vision depends on the eye, which is connected to the brain.
 I shall suggest that natural vision depends on the eyes in the head on a body supported by the ground, the brain being only the central organ of a complete visual system.*
+   <!-- .element: style="float: left; width: 60%; padding-right:1em; text-align: justify;" -->
+
+
+![gibson](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVZovKTCMAVz7bktP3kGq8mG9F8ocFQTOrKw&s)
 
 James J. Gibson, *The Ecological Approach to Visual Perception* (1979)
 <!-- .element: style="font-size:18pt" -->
 
-
-
 ==
 
 
-### *You can't learn language from the radio.*
+#### *You can't learn language from the radio.*
 Similar metaphor in NLP
 
 
 ==
+![cartesian](https://upload.wikimedia.org/wikipedia/commons/thumb/9/94/Cartesian_Cognitive_Model.png/440px-Cartesian_Cognitive_Model.png) $\quad$
+![embodied](https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Dynamical_Embodied_Model_of_Cognition.png/440px-Dynamical_Embodied_Model_of_Cognition.png)
 
+### Cognition is embodied
+Intelligence emerges in the interaction of an agent with an environment and as a result of sensorimotor activity.
 
-不闻不若闻之，闻之不若见之，见之不若知之，知之不若行之。
+==
 
-——《荀子·儒效》
-<!-- .element: style="font-size:18pt;text-align:right" -->
-<br />
-
-
-纸上得来终觉浅，绝知此事要躬行。
-
-—— 陆游 《冬夜读书示子聿》
-<!-- .element: style="font-size:18pt;text-align:right" -->  
-
-<br />
-
-知之愈明，则行之愈笃；行之愈笃，则知之益明。
-
-—— 朱熹 《朱子语类》
-<!-- .element: style="font-size:18pt;text-align:right" -->
-
-
-<!-- .slide: style="font-size:24pt" -->
+### The trend of embodied AI
+With a body $\implies$ Embodied
 
 ===
 
-### *Elephants don't play chess* (1990)
-Rodney Brooks
 
 
 
 
-==
 ## Embodied Turing Test
 
 
@@ -607,11 +671,18 @@ NavGPT, Discuss before Move
 
 ==
 
-*It it only proper to realize that language is largely a historical accident.*  <!-- .element: style="float: left; width: 50%; padding-right:1em; text-align: justify;" -->
+*It is only proper to realize that language is largely a historical accident.*  <!-- .element: style="float: left; width: 50%; padding-right:1em; text-align: justify;" -->
 
 
-![vonneumann](https://i.guim.co.uk/img/static/sys-images/Observer/Pix/pictures/2012/2/23/1330005410449/John-von-Neumann-and-the--007.jpg?width=465&dpr=1&s=none&crop=none)<!-- .element: style="width: 35%" -->
+![vonneumann](https://i.guim.co.uk/img/static/sys-images/Observer/Pix/pictures/2012/2/23/1330005410449/John-von-Neumann-and-the--007.jpg?width=465&dpr=1&s=none&crop=none) <!-- .element: style="width: 30%" -->
 
+John von Neumann, *The Computer and the Brain* (1958)
+<!-- .element: style="font-size:16pt" -->
+===
+![octopus](https://i.pinimg.com/originals/7f/73/30/7f7330cd395a1a73565f6e6e14babeaa.gif)
+![octo](https://media3.giphy.com/media/ymFiKhGpikeoReG6wT/200w.gif?cid=6c09b952bdzo3m6qfu9zvqlxx6s895w7w7zp3t4owjhfdpto&ep=v1_gifs_search&rid=200w.gif&ct=g)
+
+Octopus's camouflage
 ===
 
 ![questions](https://media.licdn.com/dms/image/C4D12AQF2HyN6MILFGw/article-cover_image-shrink_720_1280/0/1646657644961?e=2147483647&v=beta&t=O7HBRXmp-4I1vnw3p8_2THSzNzPtA7cS76_5yrCfZrY)
