--- a/lectures/2024-12-09.md
+++ b/lectures/2024-12-09.md
@@ -50,7 +50,7 @@ Harness the efficiency and sophistication refined <br> over **hundreds of millio
 
 ==
 
-![alt text](images/chengjiang.jpg) <!-- .element: height="600" --> 
+![alt text](2024-12-09-brain-inspired/chengjiang.jpg) <!-- .element: height="600" --> 
 
 ===
 
@@ -78,8 +78,8 @@ Harness the efficiency and sophistication refined <br> over **hundreds of millio
 
 ### Nissl stain & Golgi stain
 
-![alt text](images/nissl.png)<!-- .element: height="300" --> 
-![alt text](images/golgi.png)<!-- .element: height="300" -->
+![alt text](2024-12-09-brain-inspired/nissl.png)<!-- .element: height="300" --> 
+![alt text](2024-12-09-brain-inspired/golgi.png)<!-- .element: height="300" -->
 
 *The gain in brain is mainly in the stain.*
 
@@ -91,20 +91,20 @@ Harness the efficiency and sophistication refined <br> over **hundreds of millio
 ==
 
 
-![alt text](images/electron-microscope.png)
+![alt text](2024-12-09-brain-inspired/electron-microscope.png)
 
 **Neurites in contact, not continuity**<!-- .element style="color:#FFED64"--><br>by electron microscopy (1950s)
 
 ==
 
-![alt text](images/neocortex.png)<!-- .element: height="500" -->
+![alt text](2024-12-09-brain-inspired/neocortex.png)<!-- .element: height="500" -->
 
 The multilayer structure of the neocortex (1950s)
 
 
 ==
 
-![rosenblatt](images/rosenblatt.png)
+![rosenblatt](2024-12-09-brain-inspired/rosenblatt.png)
 
 Frank Rosenblatt and his Perceptron (1958)
 
@@ -122,12 +122,12 @@ Anterograde and retrograde transport inside neurons<br>with kinesin and dynein
 
 ==
 
-![alt text](images/cannoboid.png)<!-- .element: height="500" -->
+![alt text](2024-12-09-brain-inspired/cannoboid.png)<!-- .element: height="500" -->
 
 Retrograde messengers between neurons: Anandamide, NO, CO, H₂S
 ===
 
-![NeuroAI](images/neuroai.png) 
+![NeuroAI](2024-12-09-brain-inspired/neuroai.png) 
 
 ==
 ### Challenges of Today's AI
@@ -141,7 +141,7 @@ Retrograde messengers between neurons: Anandamide, NO, CO, H₂S
 ### Solution: Neuroscience x AI
 Neurocomputing and Embodied Intelligence
 
-![ett](images/e-turing-test.png) <!-- .element: height="200" -->
+![ett](2024-12-09-brain-inspired/e-turing-test.png) <!-- .element: height="200" -->
 
 ==
 
@@ -170,13 +170,13 @@ Navigation technology inspired by neuroscience
 
 
 ==
-![alt text](images/neuraltube.png)<!-- .element: height="500" -->
+![alt text](2024-12-09-brain-inspired/neuraltube.png)<!-- .element: height="500" -->
 
 Formation of the neural tube and neural crest
 
 ==
 
-![alt text](images/thumbtack.png)
+![alt text](2024-12-09-brain-inspired/thumbtack.png)
 
 A simple reflex
 
@@ -190,7 +190,7 @@ Not limited to "brain", but on the entire nervous system
 
 ### The Extension of Neuronavigation
 
-![alt text](images/animals.png)<!-- .element: height="250" --> $\quad$ ![alt text](images/levels.png)<!-- .element: height="250" --> 
+![alt text](2024-12-09-brain-inspired/animals.png)<!-- .element: height="250" --> $\quad$ ![alt text](2024-12-09-brain-inspired/levels.png)<!-- .element: height="250" --> 
 
 
 Horizontal $\quad\quad\quad\quad\quad\quad$ Vertical $\quad\quad$
@@ -199,7 +199,7 @@ Horizontal $\quad\quad\quad\quad\quad\quad$ Vertical $\quad\quad$
 
 ### Horizontal: The animals that inspire us
 
-![alt text](images/animals.png)<!-- .element: height="350" -->
+![alt text](2024-12-09-brain-inspired/animals.png)<!-- .element: height="350" -->
 
 Insects, birds, mammals, etc.
 ==
@@ -233,7 +233,7 @@ Swarm intelligence: Starlings
 
 ### Vertical: Levels of analysis and design
 
-![alt text](images/levels.png)<!-- .element: height="450" --> 
+![alt text](2024-12-09-brain-inspired/levels.png)<!-- .element: height="450" --> 
 
 ===
 
@@ -241,56 +241,56 @@ Swarm intelligence: Starlings
 
 ==
 
-![alt text](images/cells.png)<!-- .element: height="500" -->
+![alt text](2024-12-09-brain-inspired/cells.png)<!-- .element: height="500" -->
 
 The cell
 
 ==
 
-![alt text](images/cells-neurons.png)<!-- .element: height="500" -->
+![alt text](2024-12-09-brain-inspired/cells-neurons.png)<!-- .element: height="500" -->
 
 The neuron
 
 ==
-![alt text](images/rest-potential.png)<!-- .element: height="500" -->
+![alt text](2024-12-09-brain-inspired/rest-potential.png)<!-- .element: height="500" -->
 
 Na/K ion pumps
 
 ==
-![alt text](images/rest-potential2.png)<!-- .element: height="400" -->
+![alt text](2024-12-09-brain-inspired/rest-potential2.png)<!-- .element: height="400" -->
 
 Rest potential
 
 ==
 
-![alt text](images/action-potential.png)<!-- .element: height="500" -->
+![alt text](2024-12-09-brain-inspired/action-potential.png)<!-- .element: height="500" -->
 
 Action potential
 
 ==
-![alt text](images/synapse.png)<!-- .element: height="500" -->
+![alt text](2024-12-09-brain-inspired/synapse.png)<!-- .element: height="500" -->
 
 The synapse
 ==
 
-![alt text](images/EPSP.png)<!-- .element: height="500" -->
+![alt text](2024-12-09-brain-inspired/EPSP.png)<!-- .element: height="500" -->
 
 EPSP: Excitatory postsynaptic potential
 
 ==
 
-![alt text](images/IPSP.png)<!-- .element: height="500" -->
+![alt text](2024-12-09-brain-inspired/IPSP.png)<!-- .element: height="500" -->
 
 IPSP: Inhibitory postsynaptic potential
 
 ==
-![alt text](images/synaptic-integration.png)<!-- .element: height="400" -->
+![alt text](2024-12-09-brain-inspired/synaptic-integration.png)<!-- .element: height="400" -->
 
 The linear part: Synaptic integration
 
 ==
 
-![alt text](images/g-protein-modulation.png)<!-- .element: height="400" -->
+![alt text](2024-12-09-brain-inspired/g-protein-modulation.png)<!-- .element: height="400" -->
 
 The non-linear part: G-protein modulation
 
@@ -299,22 +299,22 @@ The non-linear part: G-protein modulation
 
 ### Vertical: Levels of analysis and design
 
-![alt text](images/levels.png)<!-- .element: height="450" --> 
+![alt text](2024-12-09-brain-inspired/levels.png)<!-- .element: height="450" --> 
 
 ==
 
-![alt text](images/spiking-neuron.png)
+![alt text](2024-12-09-brain-inspired/spiking-neuron.png)
 
 The spiking mechanism
 ==
 
-![alt text](images/crossbar.png) <!-- .element: height="450" --> 
+![alt text](2024-12-09-brain-inspired/crossbar.png) <!-- .element: height="450" --> 
 
 The Epsilon Neural Network on a crossbar
 
 ==
 
-![alt text](images/VBN.png) <!-- .element: height="450" --> 
+![alt text](2024-12-09-brain-inspired/VBN.png) <!-- .element: height="450" --> 
 
 DeepMind: Vector-based navigation (VBN)
 
@@ -330,20 +330,20 @@ Event-based camera
 
 ==
 
-![alt text](images/event-camera.jpeg) <!-- .element: height="450" --> 
+![alt text](2024-12-09-brain-inspired/event-camera.jpeg) <!-- .element: height="450" --> 
 
 Event-based camera
 
 ==
 
-![alt text](images/yu-etal.png) <!-- .element: height="450" --> 
+![alt text](2024-12-09-brain-inspired/yu-etal.png) <!-- .element: height="450" --> 
 
 Yu et al. *Brain-Inspired Multimodal Hybrid Neural Network for Robot Place Recognition. Sci. Rob.* 2023
 <!-- .element: style="text-align: right;font-size:15pt" -->
 
 ==
 
-![alt text](images/insect-behavior.png) <!-- .element: height="450" --> 
+![alt text](2024-12-09-brain-inspired/insect-behavior.png) <!-- .element: height="450" --> 
 
 Delft: A tiny drone
 
@@ -357,7 +357,7 @@ Delft: A tiny drone
 
 ### Vertical: Levels of analysis and design
 
-![alt text](images/levels.png)<!-- .element: height="450" --> 
+![alt text](2024-12-09-brain-inspired/levels.png)<!-- .element: height="450" --> 
 
 ===
 
@@ -377,19 +377,19 @@ Towards cognitive navigation
 Spatial Intelligence by Howard Gardner in 1983
 
 ==
-![frame-of-mind](images/rotation.png)<!-- .element: height="500" --> 
+![frame-of-mind](2024-12-09-brain-inspired/rotation.png)<!-- .element: height="500" --> 
 
 Whether the second form is a rotation of the first
 
 ==
 
-![alt text](images/stairs.png) <!-- .element: height="500" --> 
+![alt text](2024-12-09-brain-inspired/stairs.png) <!-- .element: height="500" --> 
 
 Upstairs or downstairs?
 
 ==
 
-![alt text](images/binocular.png) <!-- .element: height="500" --> 
+![alt text](2024-12-09-brain-inspired/binocular.png) <!-- .element: height="500" --> 
 
 Stereo vision due to binocular disparity?
 
@@ -439,7 +439,7 @@ LI Shaun, ZHU Xiangwei
 
 ===
 
-![alt text](images/levels.png)<!-- .element: height="450" --> 
+![alt text](2024-12-09-brain-inspired/levels.png)<!-- .element: height="450" --> 
 
 ==
 
@@ -624,7 +624,7 @@ With a body $\implies$ Embodied
 ## Embodied Turing Test
 
 
-![Alt text](images/e-turing-test.png)
+![Alt text](2024-12-09-brain-inspired/e-turing-test.png)
 Ref: [Zador et al.](https://www.nature.com/articles/s41467-023-37180-x)
 
 
@@ -658,14 +658,14 @@ Inference: Autoregressive
 
 ===
 
-![Alt text](images/hippocampus.png)<!-- .element: height="500" --> 
+![Alt text](2024-12-09-brain-inspired/hippocampus.png)<!-- .element: height="500" --> 
 
 Cognitive Navigation: Connecting hippocampus to cortex
 <!-- .element: style="font-size:20pt" -->
 
 ==
 
-![Alt text](images/navgpt.png)
+![Alt text](2024-12-09-brain-inspired/navgpt.png)
 NavGPT, Discuss before Move
 
 
