--- a/lectures/2024-12-09.md
+++ b/lectures/2024-12-09.md
@@ -37,7 +37,7 @@ LI Shaun, ZHU Xiangwei
 
 ==
 
-*I am someone who just really knows what field he’s in but would like to **understand how the brain works**<!-- .element style="color:#ffde64"-->. And in my attempts to understand how the brain works, I’ve helped to create a technology that works surprisingly well.* <!-- .element: style="float: left; width: 67%; padding-right:1em;  text-align: justify;" -->
+*I am someone who just really knows what field he’s in but would like to **understand how the brain works**<!-- .element style="color:#004721"-->. And in my attempts to understand how the brain works, I’ve helped to create a technology that works surprisingly well.* <!-- .element: style="float: left; width: 67%; padding-right:1em;  text-align: justify;" -->
 
 ![alt text](https://www.nobelprize.org/uploads/2024/10/2-2_3-6704d5430e393-464x696.jpg) <!-- .element: style="width: 25%" -->
 
@@ -45,7 +45,7 @@ LI Shaun, ZHU Xiangwei
 
 ### Why Brain-Inspired?
 
-Harness the efficiency and sophistication refined <br> over **hundreds of millions of years**<!-- .element style="color:#FFED64"--> of evolution
+Harness the efficiency and sophistication refined <br> over **hundreds of millions of years**<!-- .element style="color:#004721"--> of evolution
 <!-- .element: style="font-size:26pt" -->
 
 ==
@@ -83,7 +83,7 @@ Harness the efficiency and sophistication refined <br> over **hundreds of millio
 
 *The gain in brain is mainly in the stain.*
 
-**Neurons communicate by contact or continuity?**  <!-- .element style="color:#FFED64"-->
+**Neurons communicate by contact or continuity?**  <!-- .element style="color:#004721"-->
 ==
 
 ![golgi-cajal](https://www.frontiersin.org/files/Articles/434842/fncel-13-00187-HTML/image_m/fncel-13-00187-g001.jpg)<!-- .element: height="600" -->
@@ -93,7 +93,7 @@ Harness the efficiency and sophistication refined <br> over **hundreds of millio
 
 ![alt text](2024-12-09-brain-inspired/electron-microscope.png)
 
-**Neurites in contact, not continuity**<!-- .element style="color:#FFED64"--><br>by electron microscopy (1950s)
+**Neurites in contact, not continuity**<!-- .element style="color:#004721"--><br>by electron microscopy (1950s)
 
 ==
 
@@ -185,7 +185,7 @@ A simple reflex
 #### Navigation technology inspired by neuroscience
 
 Not limited to "brain", but on the entire nervous system
-<!-- .element: style="font-size:30pt;color:#ffde64" -->
+<!-- .element: style="font-size:30pt;color:#004721" -->
 ===
 
 ### The Extension of Neuronavigation
@@ -395,7 +395,7 @@ Stereo vision due to binocular disparity?
 
 ==
 
-*There is a distance—but a **navigable**<!-- .element style="color:#ffde64"--> one—between this elementary recognition of objects and that ability to trace the relationships among objects that proves central in **spatial intelligence**<!-- .element style="color:#ffde64"-->.*<!-- .element: style="float: left; width: 75%; padding-right:1em;  text-align: left;" -->
+*There is a distance—but a **navigable**<!-- .element style="color:#004721"--> one—between this elementary recognition of objects and that ability to trace the relationships among objects that proves central in **spatial intelligence**<!-- .element style="color:#004721"-->.*<!-- .element: style="float: left; width: 75%; padding-right:1em;  text-align: left;" -->
 
 ![frame-of-mind](https://m.media-amazon.com/images/I/718ThpPJeSL.jpg) <!-- .element: style="width: 18%" -->
 
